--- a/.github/workflows/deploy-enterprise-test.yml
+++ b/.github/workflows/deploy-enterprise-test.yml
@@ -26,7 +26,7 @@ jobs:
               job_spec/INSAR_ISCE.yml
               job_spec/WATER_MAP.yml
               job_spec/RIVER_WIDTH.yml
-            instance_types: r6id.xlarge,r6id.4xlarge,r5dn.xlarge
+            instance_types: r6id.xlarge,r6id.4xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
             required_surplus: 0
