--- a/.github/workflows/deploy-enterprise.yml
+++ b/.github/workflows/deploy-enterprise.yml
@@ -19,7 +19,7 @@ jobs:
             product_lifetime_in_days: 180
             quota: 0
             job_files: job_spec/AUTORIFT_ITS_LIVE.yml job_spec/AUTORIFT_ITS_LIVE_TEST.yml
-            instance_types: r6id.xlarge,r5dn.xlarge
+            instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 10000
             expanded_max_vcpus: 10000
             required_surplus: 0
@@ -79,7 +79,7 @@ jobs:
             product_lifetime_in_days: 365000
             quota: 0
             job_files: job_spec/INSAR_GAMMA.yml
-            instance_types: r6id.xlarge,r5dn.xlarge
+            instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
             required_surplus: 0
@@ -94,7 +94,7 @@ jobs:
             product_lifetime_in_days: 14
             quota: 0
             job_files: job_spec/RTC_GAMMA.yml job_spec/WATER_MAP.yml
-            instance_types: r6id.xlarge,r5dn.xlarge
+            instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
             required_surplus: 0
@@ -124,7 +124,7 @@ jobs:
             product_lifetime_in_days: 30
             quota: 0
             job_files: job_spec/INSAR_GAMMA.yml
-            instance_types: r6id.xlarge,r5dn.xlarge
+            instance_types: r6id.xlarge,r5dn.xlarge,r5d.xlarge
             default_max_vcpus: 640
             expanded_max_vcpus: 640
             required_surplus: 0
