set OMP_NUM_THREADS for GAMMA job types and expand DAAC EC2 instance types

--- a/job_spec/INSAR_GAMMA.yml
+++ b/job_spec/INSAR_GAMMA.yml
@@ -71,6 +71,8 @@ INSAR_GAMMA:
       command:
         - ++process
         - insar
+        - ++omp-num-threads
+        - '4'
         - --bucket
         - '!Ref Bucket'
         - --bucket-prefix
