--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -27,7 +27,7 @@ INSAR_ISCE_TEST:
           minLength: 67
           maxLength: 67
           example: S1B_IW_SLC__1SDV_20210711T014947_20210711T015013_027740_034F80_D404
-    tropospheric_model:
+    weather_model:
       api_schema:
         description: Weather model used to generate tropospheric delay estimations
         default: None
@@ -66,8 +66,8 @@ INSAR_ISCE_TEST:
         - '!Ref Bucket'
         - --bucket-prefix
         - Ref::bucket_prefix
-        - --tropospheric-model
-        - Ref::tropospheric_model
+        - --weather-model
+        - Ref::weather_model
       timeout: 10800
       vcpu: 1
       memory: 7500
