Fix calcDelaysGUNW caps

--- a/job_spec/INSAR_ISCE.yml
+++ b/job_spec/INSAR_ISCE.yml
@@ -59,7 +59,7 @@ INSAR_ISCE:
       image: ghcr.io/dbekaert/raider
       command:
         - ++process
-        - calcDelaysGunw
+        - calcDelaysGUNW
         - --bucket
         - '!Ref Bucket'
         - --bucket-prefix
