--- a/job_spec/INSAR_ISCE_TEST.yml
+++ b/job_spec/INSAR_ISCE_TEST.yml
@@ -61,7 +61,7 @@ INSAR_ISCE_TEST:
       image_tag: test
       command:
         - ++process
-        - calcDelaysGunw
+        - calcDelaysGUNW
         - --bucket
         - '!Ref Bucket'
         - --bucket-prefix
